syntax = "proto3";

message UnRegistered {
  uint64 request_id = 1;
  uint64 registration_id = 2;
}
