syntax = "proto3";

message UnSubscribe {
  uint64 request_id = 1;
  uint64 subscription_id = 2;
}
