syntax = "proto3";

message UnSubscribed {
  uint64 request_id = 1;
}
